--- a/public/product.html
+++ b/public/product.html
@@ -2,4 +2,4 @@
 	{{product.name}}
 	<em class="pull-right">{{product.price | currency}}</em>
 </h3>
-<img ng-src="{{product.image}}" alt="gem" />
+<img class="productImg" ng-src="{{product.image}}" alt="gem" />
