--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,19 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+          <div class="col-xs-4 col-xs-offset-4">
+            <h1 class="navTitle">Store</h1>
+          </div>
+          <div id="cartIconDiv" class="col-xs-4">
+            <a href="www.google.com" id="cartLink">
+              <span id="cartIcon"  class="glyphicon glyphicon-shopping-cart"></span>
+              <span id="cartLabel">Cart</span>
+            </a>
+          </div>
+      </div>
+    </nav>
     <div id="store" ng-controller="StoreController as store">
       <div class="container">
         <div class="row" ng-repeat="rows in chunkedData">
