added cart buttons

--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,8 @@
-<div id="store" ng-controller="StoreController as store">
+<div id="store">
 
   <div class="jumbotron text-center" id="mainJumbo">
-      <h1>Welcome to the microservices demo!</h1>
+      <h2>Welcome to the microservices demo!</h2>
+      <h4>click on images to add products to your cart!</h4>
   </div>
 
   <div class="container">
