--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Store</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=.7">
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
         </div>
       </div>
     </nav>
-    <div ng-controller="mainController">
+    <div>
       <div class="main">
 
         <div ng-view></div>
