--- a/public/cart.html
+++ b/public/cart.html
@@ -7,8 +7,17 @@
           {{ cartCtrl.note }}
         </p>
     </div>
-    <ul>
-      <li ng-repeat="item in cartCtrl.cart">
-        {{item.name}}
-      </li>
-    </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-6 panel">
+          <ul>
+            <li ng-repeat="product in cartCtrl.cart">
+              <h3 class="productTitle">
+              	{{product.name}}
+              	<em class="pull-right">{{product.price | currency}}</em>
+              </h3>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
