--- a/public/product-tabs.html
+++ b/public/product-tabs.html
@@ -5,24 +5,24 @@
       <a href ng-click="panel.selectTab(1)">Description</a>
     </li>
     <li ng-class="{ active:panel.isSelected(2) }">
-      <a href ng-click="panel.selectTab(2)">Specification</a> 
+      <a href ng-click="panel.selectTab(2)">Specification</a>
     </li>
     <li ng-class="{ active:panel.isSelected(3) }">
       <a href ng-click="panel.selectTab(3)">Reviews</a>
     </li>
   </ul>
 
-  <div class="panel" ng-show="panel.isSelected(1)">
+  <div class="product-panel panel" ng-show="panel.isSelected(1)">
     <h4>Description</h4>
     <p>{{product.description}}</p>
   </div>
 
-  <div class="panel" ng-show="panel.isSelected(2)">
+  <div class="product-panel panel" ng-show="panel.isSelected(2)">
     <h4>Specifications</h4>
     <p>None yet</p>
   </div>
 
-  <div class="panel" ng-show="panel.isSelected(3)">
+  <div class="product-panel panel" ng-show="panel.isSelected(3)">
     <product-reviews></product-reviews>
   </div>
 
