--- a/public/home.html
+++ b/public/home.html
@@ -1,6 +1,6 @@
 <div id="store">
 
-  <div class="jumbotron text-center" id="mainJumbo">
+  <div class="jumbotron text-center jumbo">
       <h2>Welcome to the microservices demo!</h2>
       <h4>click on images to add products to your cart!</h4>
   </div>
