--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/toastr/toastr.min.css">
     <link rel="stylesheet" href="stylesheets/style.css">
   </head>
 
@@ -18,11 +19,11 @@
         <div id="homeIconDiv" class="col-xs-4">
           <a href="#/" id="navLink">
             <span id="navIcon"  class="glyphicon glyphicon-home"></span>
-            <span id="navLabel">Home</span>
+            <span id="navLabel">Store</span>
           </a>
         </div>
         <div class="col-xs-4 ">
-          <h1 class="navTitle">Store</h1>
+          <h1 class="navTitle">The Shop</h1>
         </div>
         <div id="cartIconDiv" class="col-xs-4">
           <a href="#cart" id="navLink">
@@ -47,9 +48,11 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/toastr/toastr.min.js"></script>
 
     <!-- app code -->
     <script src="client.js"></script>
     <script src="products.js"></script>
+    <script src="checkout.js"></script>
   </body>
 </html>
