--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 
     <script>
         // globally set the API URLS
-        var productsApi = '192.168.59.103:40002';
-        var cartApi     = '192.168.59.103:40001';
-        var reviewApi   = '192.168.59.103:40003';
+        var productsApi = '';
+        var cartApi     = '';
+        var reviewApi   = '';
     </script>
 
   </head>
